@@ -132,6 +132,7 @@ ReplSetServers.prototype.connect = function(parent, callback) {
     server.connection.on("connect", function() {
       // Create a callback function for a given connection
       var connectCallback = function(err, reply) {
+        if(replSetSelf.otherErrors.length > 0) return;
         // Update number of connected servers, ensure we update before any possible errors
         numberOfConnectedServers = numberOfConnectedServers + 1;
                 
@@ -174,11 +175,15 @@ ReplSetServers.prototype.connect = function(parent, callback) {
 
             if(replSetSelf.replicaSet != node["setName"]) {
               // Add other error to the list of errors
-              replSetSelf.otherErrors.push(new Error("configured mongodb replicaset does not match provided replicaset [" + node["setName"] + "] != [" + replSetSelf.replicaSet + "]"));
+              var errorMessage = new Error("configured mongodb replicaset does not match provided replicaset [" + node["setName"] + "] != [" + replSetSelf.replicaSet + "]");
+              replSetSelf.otherErrors.push(errorMessage);
               // Close all servers and return an error
               for(var i = 0; i < serverConnections.length; i++) {
                 serverConnections[i].close();
               }
+              
+              // Return the error message
+              return callback(errorMessage);
             }
           }
         
@@ -203,7 +208,7 @@ ReplSetServers.prototype.connect = function(parent, callback) {
         }
 
         // emit a message saying we got a master and are ready to go and change state to reflect it
-        if(numberOfConnectedServers == serverConnections.length && (parent.state == 'notConnected')) {
+        if(numberOfConnectedServers >= serverConnections.length && (parent.state == 'notConnected')) {
           parent.isInitializing  = false;
           // If we have no master connection
           if(replSetSelf.otherErrors.length > 0) {
@@ -224,7 +229,7 @@ ReplSetServers.prototype.connect = function(parent, callback) {
 
         // We had some errored out servers, does not matter as long as we have a master server
         // we can write to.
-        if ((numberOfConnectedServers + numberOfErrorServers) == serverConnections.length) { 
+        if((numberOfConnectedServers + numberOfErrorServers) >= serverConnections.length) { 
           parent.isInitializing  = false;
           // If we have no master connection
           if(replSetSelf.otherErrors.length > 0) {
